--- a/notebooks/colab_run.ipynb
+++ b/notebooks/colab_run.ipynb
@@ -50,7 +50,7 @@
     "!pip install -r requirements.txt\n",
     "\n",
     "os.environ[\"WANDB_MODE\"] = \"offline\"\n",
-    "print(\"✅ Environment Ready\")"
+    "print(\"Environment created.\")"
    ]
   },
   {
