--- a/notebooks/colab_run.ipynb
+++ b/notebooks/colab_run.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python inference.py --test_only"
+    "!python inference.py"
    ]
   }
  ],
