[UPDATE] added download weights in colab run to save results locally

--- a/notebooks/colab_run.ipynb
+++ b/notebooks/colab_run.ipynb
@@ -23,8 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import google.colab"
+    "from google.colab import files"
    ]
   },
   {
@@ -89,6 +88,19 @@
    "outputs": [],
    "source": [
     "!python inference.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d6e68c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Once done, please run this cell to download the results\n",
+    "print(\"Bundling results for download...\")\n",
+    "!zip -r results_artifact.zip training_history/best_weights/ training_history/logs/ tests/\n",
+    "files.download('results_artifact.zip')"
    ]
   }
  ],
