[UPDATE] updated download flow for results

--- a/notebooks/colab_run.ipynb
+++ b/notebooks/colab_run.ipynb
@@ -23,6 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import shutil\n",
     "from google.colab import files"
    ]
   },
@@ -97,10 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Once done, please run this cell to download the results\n",
+    "# Run this cell to download the results, or navigate inside the temporary folder to manually interact with them \n",
+    "# Please note: if the runtime gets disconnected your results will be lost\n",
     "print(\"Bundling results for download...\")\n",
-    "!zip -r results_artifact.zip training_history/best_weights/ training_history/logs/ tests/\n",
-    "files.download('results_artifact.zip')"
+    "!zip -r results_artifact_all.zip training_history/ tests/ wandb/\n",
+    "files.download('results_artifact_all.zip')"
    ]
   }
  ],
