[UPDATE] added mac support

--- a/notebooks/colab_run.ipynb
+++ b/notebooks/colab_run.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "%%capture\n",
     "!pip install torch torchvision --index-url https://download.pytorch.org/whl/cu126\n",
-    "!pip install -r requirements.txt\n",
+    "!pip install -r requirements_linux.txt\n",
     "\n",
     "os.environ[\"WANDB_MODE\"] = \"offline\"\n",
     "print(\"Environment created.\")"
